Fixes to enable "stuck" carts to be deleted from the visible queue in the status tool

--- a/resources/stylesheets/emsl_chrome.css
+++ b/resources/stylesheets/emsl_chrome.css
@@ -32,7 +32,7 @@ h1.underline {
   color:white;
   text-transform:uppercase;
   font-weight:bold;
-  font-size:14px;:white;
+  font-size:14px;
 }
 
 .menu_separator {
